components/button/Styles.module.css
.button {
    border-style: none;
}

.buttonIcon {
    display: flex;
    justify-content: center;
    align-items: center;
    border-style: none;
    margin: 10px;
    width: 50px;
    height: 50px;
    font-size: 20px;
    border-radius: 25%;
}

